--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     display:grid; place-items:center; min-height:100vh; padding:18px;
   }
   .wrap{ width:min(1100px,100%); }
+
   .tabs{ display:flex; gap:8px; margin-bottom:12px; }
   .tab{
     padding:10px 16px; border-radius:999px;
@@ -91,12 +92,13 @@
     </div>
   </div>
 
-  <div id="ramadanGrid" class="grid" style="display:none;">
+  <!-- Ramadan: show PYP + Secondary side-by-side -->
+  <div id="ramadanGrid" class="grid">
     <div class="card">
-      <h3>Primary (Ramadan)</h3>
+      <h3>PYP (Ramadan)</h3>
       <table>
         <thead><tr><th style="width:30%;">Period</th><th style="width:45%;">Time</th><th>Status</th></tr></thead>
-        <tbody id="primaryBody"></tbody>
+        <tbody id="pypBody"></tbody>
       </table>
     </div>
 
@@ -109,6 +111,7 @@
     </div>
   </div>
 
+  <!-- Regular: single table -->
   <div id="regularSingle" class="card" style="display:none;">
     <h3>Regular</h3>
     <table>
@@ -120,41 +123,55 @@
 </div>
 
 <script>
-  // Default page should be Ramadan
-  let mode = "ramadan";
+  // ===== SCHEDULES =====
 
-  // Ramadan timings you provided (used for BOTH Primary and Secondary unless you change one list)
-// ===== RAMADAN SCHEDULES =====
+  // PYP Ramadan (new timings you provided)
+  const ramadanPYP = [
+    { name:"Period 1",       start:"09:00", end:"09:30" },
+    { name:"Period 2",       start:"09:30", end:"10:00" },
+    { name:"Period 3",       start:"10:00", end:"10:30" },
+    { name:"Break",          start:"10:30", end:"11:00" },
+    { name:"Period 4",       start:"11:00", end:"11:30" },
+    { name:"Period 5",       start:"11:30", end:"12:00" },
+    { name:"Period 6",       start:"12:00", end:"12:30" },
+    { name:"Lunch",          start:"12:30", end:"13:00" },
+    { name:"Period 8",       start:"13:00", end:"13:30" },
+    { name:"Period 9",       start:"13:30", end:"14:00" }
+  ];
 
-const ramadanPYP = [
-  { name:"Period 1",        start:"09:00", end:"09:30" },
-  { name:"Period 2",        start:"09:30", end:"10:00" },
-  { name:"Period 3",        start:"10:00", end:"10:30" },
-  { name:"Break",           start:"10:30", end:"11:00" },
-  { name:"Period 4",        start:"11:00", end:"11:30" },
-  { name:"Period 5",        start:"11:30", end:"12:00" },
-  { name:"Period 6",        start:"12:00", end:"12:30" },
-  { name:"Lunch",           start:"12:30", end:"13:00" },
-  { name:"Period 7",        start:"13:00", end:"13:30" },
-  { name:"Period 8",        start:"13:30", end:"14:00" }
-];
+  // Secondary Ramadan (keep as before)
+  const ramadanSecondary = [
+    { name:"Period 1",       start:"09:00", end:"09:30"},
+    { name:"Period 2",       start:"09:30", end:"10:00"},
+    { name:"Period 3",       start:"10:00", end:"10:30"},
+    { name:"Period 4",       start:"10:30", end:"11:00"},
+    { name:"Period 5",       start:"11:00", end:"11:30"},
+    { name:"Period 6 (MYP)", start:"11:30", end:"12:00"},
+    { name:"Period 7 (DP)",  start:"12:00", end:"12:30"},
+    { name:"Period 8 (PYP)", start:"12:30", end:"13:00"},
+    { name:"Period 9",       start:"13:00", end:"13:30"},
+    { name:"Period 10",      start:"13:30", end:"14:00"}
+  ];
 
+  // Regular schedule (your original)
+  const regularSchedule = [
+    { name:"P1",    start:"08:00", end:"08:40" },
+    { name:"P2",    start:"08:40", end:"09:20" },
+    { name:"P3",    start:"09:20", end:"10:00" },
+    { name:"Break", start:"10:00", end:"10:20" },
+    { name:"P4",    start:"10:20", end:"11:00" },
+    { name:"P5",    start:"11:00", end:"11:40" },
+    { name:"P6",    start:"11:40", end:"12:20" },
+    { name:"Lunch", start:"12:20", end:"13:00" },
+    { name:"P7",    start:"13:00", end:"13:40" },
+    { name:"P8",    start:"13:40", end:"14:20" },
+    { name:"P9",    start:"14:20", end:"15:00" }
+  ];
 
-// KEEP — your original Secondary Ramadan schedule
-const ramadanSecondary = [
-  { name:"Period 1",       start:"09:00", end:"09:30"},
-  { name:"Period 2",       start:"09:30", end:"10:00"},
-  { name:"Period 3",       start:"10:00", end:"10:30"},
-  { name:"Period 4",       start:"10:30", end:"11:00"},
-  { name:"Period 5",       start:"11:00", end:"11:30"},
-  { name:"Period 6 (MYP)", start:"11:30", end:"12:00"},
-  { name:"Period 7 (DP)",  start:"12:00", end:"12:30"},
-  { name:"Period 8 (PYP)", start:"12:30", end:"13:00"},
-  { name:"Period 9",       start:"13:00", end:"13:30"},
-  { name:"Period 10",      start:"13:30", end:"14:00"}
-];
+  // ===== STATE =====
+  let mode = "ramadan"; // default
 
-
+  // ===== ELEMENTS =====
   const clockEl = document.getElementById("clock");
   const dayLabelEl = document.getElementById("dayLabel");
   const modeLabelEl = document.getElementById("modeLabel");
@@ -166,10 +183,11 @@ const ramadanSecondary = [
   const ramadanGrid = document.getElementById("ramadanGrid");
   const regularSingle = document.getElementById("regularSingle");
 
-  const primaryBody = document.getElementById("primaryBody");
+  const pypBody = document.getElementById("pypBody");
   const secondaryBody = document.getElementById("secondaryBody");
   const regularBody = document.getElementById("regularBody");
 
+  // ===== HELPERS =====
   function toMinutes(hhmm){
     const [h,m] = hhmm.split(":").map(Number);
     return h*60 + m;
@@ -194,29 +212,7 @@ const ramadanSecondary = [
     }
   }
 
-  function setMode(nextMode){
-    mode = nextMode;
-
-    tabRamadan.setAttribute("aria-selected", mode === "ramadan");
-    tabRegular.setAttribute("aria-selected", mode === "regular");
-
-    modeLabelEl.textContent = `Mode: ${mode === "ramadan" ? "Ramadan" : "Regular"}`;
-
-    if(mode === "ramadan"){
-      ramadanGrid.style.display = "grid";
-      regularSingle.style.display = "none";
-      buildTable(primaryBody, ramadanPrimary);
-      buildTable(secondaryBody, ramadanSecondary);
-    } else {
-      ramadanGrid.style.display = "none";
-      regularSingle.style.display = "block";
-      buildTable(regularBody, regularSchedule);
-    }
-
-    update();
-  }
-
-  function highlightNow(tbody, scheduleName){
+  function highlightNow(tbody, schedule, label){
     const now = new Date();
     const nowMins = now.getHours()*60 + now.getMinutes();
 
@@ -239,43 +235,8 @@ const ramadanSecondary = [
       const statusTd = active.children[2];
       statusTd.textContent = "Now";
       statusTd.className = "statusNow";
-      return `${scheduleName}: ${active.children[0].textContent}`;
+      return `${label}: ${active.children[0].textContent}`;
     }
 
     const firstStart = toMinutes(schedule[0].start);
-    const lastEnd = toMinutes(schedule[schedule.length-1].end);
-
-    if(nowMins < firstStart) return `${scheduleName}: Before school`;
-    if(nowMins >= lastEnd) return `${scheduleName}: After school`;
-    return `${scheduleName}: Transition / gap`;
-  }
-
-  function update(){
-    const now = new Date();
-    clockEl.textContent = now.toLocaleTimeString([], { hour:"2-digit", minute:"2-digit", second:"2-digit" });
-    dayLabelEl.textContent = fmtDay(now);
-
-    if(mode === "ramadan"){
-      const p = highlightNow(primaryBody, "Primary");
-      const s = highlightNow(secondaryBody, "Secondary");
-      nowLabelEl.textContent = `${p} | ${s}`;
-    } else {
-      const r = highlightNow(regularBody, "Regular");
-      nowLabelEl.textContent = r;
-    }
-  }
-
-  // Events
-  tabRamadan.addEventListener("click", () => setMode("ramadan"));
-  tabRegular.addEventListener("click", () => setMode("regular"));
-
-  tabRamadan.addEventListener("keydown", (e) => { if(e.key==="Enter"||e.key===" "){ e.preventDefault(); setMode("ramadan"); }});
-  tabRegular.addEventListener("keydown", (e) => { if(e.key==="Enter"||e.key===" "){ e.preventDefault(); setMode("regular"); }});
-
-  // Init (default Ramadan)
-  setMode("ramadan");
-  setInterval(update, 1000);
-</script>
-</body>
-</html>
-
+    const lastEnd = toMinutes(schedu
